--- a/odoo/src/main/resources/application.properties
+++ b/odoo/src/main/resources/application.properties
@@ -1,1 +1,33 @@
+# Application Configuration
 spring.application.name=odoo
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/ecofinds?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=89Hello$
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET:ecofinds-secret-key-for-development-only}
+jwt.expiration=86400000
+
+# Server Configuration
+server.port=8080
+
+# Logging Configuration
+logging.level.com.odoo=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# API Documentation
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
